fixed spacing on top tracks

--- a/src/components/TopTracks/TopTracks.css
+++ b/src/components/TopTracks/TopTracks.css
@@ -19,5 +19,5 @@ div.TopTracks-container{
 	}
 
 		div.TopTracks-container ul li{
-			gap: 5px;	
+			@apply mb-2.5;
 		}
